Improved Unit Tests